--- a/standalone/package.json
+++ b/standalone/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
-    "dev:server": "ts-node server.ts",
+    "dev:server": "ts-node --project tsconfig.server.json server.ts",
     "dev:client": "webpack serve --mode development",
     "build": "npm run build:client && npm run build:server",
     "build:server": "tsc --project tsconfig.server.json",
@@ -35,8 +35,10 @@
     "directory": "plugins/alarms/standalone"
   },
   "dependencies": {
+    "@elastic/datemath": "^5.0.3",
     "@opensearch-project/oui": "^1.22.1",
     "express": "^4.18.2",
+    "moment": "^2.30.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.3.0"
