--- a/standalone/package.json
+++ b/standalone/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@opensearch-dashboards/alarms",
+  "name": "@anirudhaj/alarms",
   "version": "1.0.0",
   "description": "Standalone Alarms service for OpenSearch Dashboards",
   "bin": {
@@ -31,8 +31,8 @@
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/opensearch-project/OpenSearch-Dashboards.git",
-    "directory": "plugins/alarms/standalone"
+    "url": "https://github.com/anirudha/alert-manager.git",
+    "directory": "standalone"
   },
   "dependencies": {
     "@elastic/datemath": "^5.0.3",
